src/tess/tl/test/pass/test_inline_lambda_argument.tl
#module main

// applies narrowing cast from Int to CInt
apply(f: (Int) -> Int, x: Int) -> CInt { ci: CInt := f(x) ci }

main() {
    apply((x) { x + 1 }, 5) - 6
}
