src/tess/tl/test/fail/test_fail_receiver_block_nested.tl
// Receiver blocks must be at module top level, not inside function bodies.

#module main

main() {
    s: Int : {
        foo() -> Int { s }
    }
    0
}
